Add posicionais da imagem do fundo

--- a/exercicios-mod3/ex1/fundo006.html
+++ b/exercicios-mod3/ex1/fundo006.html
@@ -6,12 +6,15 @@
     <title>Teste de imagem</title>
     <style>
         body{
-            background-image: url('imagens/wallpaper002.jpg');
+            /*background-image: url('imagens/wallpaper002.jpg');
             background-repeat: no-repeat;
             background-color: black;
             background-position: center top;
             background-size: cover;
             height: 100vh;
+            background-attachment: fixed;*/
+            background: black url('imagens/wallpaper002.jpg') no-repeat fixed;
+            background-size: cover;
         }
         div{
             max-width: 300px;
@@ -30,6 +33,9 @@
     <div>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, deserunt earum sequi minima incidunt similique animi culpa. Illo, iste animi. Odio est quasi illum! Sequi numquam eos eaque cumque assumenda? Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium tenetur, quod ducimus adipisci aliquam consequatur, perspiciatis qui totam placeat quisquam eum omnis nulla deleniti tempore cumque modi id culpa! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae atque delectus facere unde corrupti placeat quidem sapiente! Iure tempora omnis vitae, modi ullam earum ex sunt, veritatis itaque, commodi facilis. Lo
+        dio est quasi illum! Sequi numquam eos eaque cumque assumenda? Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium tenetur, quod ducimus adipisci aliquam consequatur, perspiciatis qui totam placeat quisquam eum omnis nulla deleniti tempore cumque modi id culpa! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae atque delectus facere unde corrupti placeat quidem sapiente! Iure tempora omnis vitae, modi ullam earum ex sunt, veritatis itaque, commodi facilis. Lo
+        dio est quasi illum! Sequi numquam eos eaque cumque assumenda? Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium tenetur, quod ducimus adipisci aliquam consequatur, perspiciatis qui totam placeat quisquam eum omnis nulla deleniti tempore cumque modi id culpa! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae atque delectus facere unde corrupti placeat quidem sapiente! Iure tempora omnis vitae, modi ullam earum ex sunt, veritatis itaque, commodi facilis. Lo
+        dio est quasi illum! Sequi numquam eos eaque cumque assumenda? Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium tenetur, quod ducimus adipisci aliquam consequatur, perspiciatis qui totam placeat quisquam eum omnis nulla deleniti tempore cumque modi id culpa! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae atque delectus facere unde corrupti placeat quidem sapiente! Iure tempora omnis vitae, modi ullam earum ex sunt, veritatis itaque, commodi facilis. Lodio est quasi illum! Sequi numquam eos eaque cumque assumenda? Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium tenetur, quod ducimus adipisci aliquam consequatur, perspiciatis qui totam placeat quisquam eum omnis nulla deleniti tempore cumque modi id culpa! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae atque delectus facere unde corrupti placeat quidem sapiente! Iure tempora omnis vitae, modi ullam earum ex sunt, veritatis itaque, commodi facilis. Lodio est quasi illum! Sequi numquam eos eaque cumque assumenda? Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium tenetur, quod ducimus adipisci aliquam consequatur, perspiciatis qui totam placeat quisquam eum omnis nulla deleniti tempore cumque modi id culpa! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae atque delectus facere unde corrupti placeat quidem sapiente! Iure tempora omnis vitae, modi ullam earum ex sunt, veritatis itaque, commodi facilis. Lodio est quasi illum! Sequi numquam eos eaque cumque assumenda? Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium tenetur, quod ducimus adipisci aliquam consequatur, perspiciatis qui totam placeat quisquam eum omnis nulla deleniti tempore cumque modi id culpa! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae atque delectus facere unde corrupti placeat quidem sapiente! Iure tempora omnis vitae, modi ullam earum ex sunt, veritatis itaque, commodi facilis. Lodio est quasi illum! Sequi numquam eos eaque cumque assumenda? Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium tenetur, quod ducimus adipisci aliquam consequatur, perspiciatis qui totam placeat quisquam eum omnis nulla deleniti tempore cumque modi id culpa! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae atque delectus facere unde corrupti placeat quidem sapiente! Iure tempora omnis vitae, modi ullam earum ex sunt, veritatis itaque, commodi facilis. Lo
         </p>
     </div>
     
