--- a/exercicios-mod3/ex2/index.html
+++ b/exercicios-mod3/ex2/index.html
@@ -9,11 +9,11 @@
 <body>
 
     <header>
-        Cordel Moderno
-        Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a>
+        <h1>Cordel Moderno</h1>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a></p>
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -25,7 +25,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -37,7 +37,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -58,7 +58,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -70,7 +70,7 @@
         </p> 
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
@@ -93,7 +93,7 @@
     </section>
 
     <footer>
-        Site criado por Pietro Ribeiro acesse o curso em <a href="https://www.cursoemvideo.com/cursos/" target="_blank" rel="external">Cursoemvideo</a>
+        Site criado por Pietro Ribeiro para o  <a href="https://www.cursoemvideo.com/cursos/" target="_blank" rel="external">Cursoemvideo</a>
     </footer>
 
 </body>
