--- a/exercicios-mod3/ex3/tabela.html
+++ b/exercicios-mod3/ex3/tabela.html
@@ -10,6 +10,7 @@
         }
         table{
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
         tr.row{
@@ -18,7 +19,8 @@
         td{
             border: 1px solid black;
             padding: 5px;
-            
+            vertical-align: middle;
+            text-align: center;
         }
         td.dt{
             background-color: yellow;
