--- a/exercicios-mod3/ex3/tabela01.html
+++ b/exercicios-mod3/ex3/tabela01.html
@@ -31,12 +31,12 @@
     </style>
 </head>
 <body>
-    <h1>Uso de tabelas grander</h1>
+    <h1>Uso de tabelas grandes</h1>
     <table>
         <thead>
             <tr>
-               <th>Estado</th>
-               <th>População</th>
+               <th scope="col">Estado</th>
+               <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -67,7 +67,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td><strong>110 000 000</strong></td>
             </tr>
         </tfoot>
