--- a/exercicios-mod4/mediaquery/mq001/index.html
+++ b/exercicios-mod4/mediaquery/mq001/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="tela.css" media="screen">
-    <link rel="stylesheet" href="imprimir.css" media="print">
+    <link rel="stylesheet" href="estilos/tela.css" media="screen">
+    <link rel="stylesheet" href="estilos/imprimir.css" media="print">
     <title>The Good News Time</title>
 </head>
 <body>
