--- a/exercicios-mod4/mediaquery/mq002/index.html
+++ b/exercicios-mod4/mediaquery/mq002/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos/portrait.css" media="screen and (orientation:portrait)">
+    <link rel="stylesheet" href="estilos/landscape.css" media="screen and (orientation:landscape)">
+    <link rel="stylesheet" href="estilos/estilos.css" media="all">
 </head>
 <body>
-    
+    <h1>Dois modos retrato e paisagem</h1>
 </body>
 </html>
