--- a/exercicios-mod4/mediaquery/mq004/index.html
+++ b/exercicios-mod4/mediaquery/mq004/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
-    <link rel="stylesheet" href="estilos/style.css" media="print">
-    <link rel="stylesheet" href="estilos/media-query.css" media="all">
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css" >
 </head>
 <body>
     <main>
         <h1>Testando Media Query</h1>
-        <img src="imagens/icon-pc.png" alt="Icone Pc">
-        <img src="imagens/icon-phone.png" alt="Icone Telefone">
-        <img src="imagens/icon-print.png" alt="Icone Impressora">
-        <img src="imagens/icon-tablet.png" alt="Icone Tablet">
-        <img src="imagens/icon-tv.png" alt="Icone Tv">
+        <img id="pc" src="imagens/icon-pc.png" alt="Icone Pc">
+        <img id="tel" src="imagens/icon-phone.png" alt="Icone Telefone">
+        <img id="printer" src="imagens/icon-print.png" alt="Icone Impressora">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Icone Tablet">
+        <img id="tv" src="imagens/icon-tv.png" alt="Icone Tv">
     </main>
 </body>
 </html>
